--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,9 +1,13 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=h2
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:file:C:/Users/Ljupce/Documents/Java Projects/WP/lab1/db/db
+#spring.datasource.username=h2
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:h2:mem:events_h2
+spring.datasource.username=ljupce
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
